--- a/for-proxy-containers/docker-compose.proxy.yml
+++ b/for-proxy-containers/docker-compose.proxy.yml
@@ -20,6 +20,7 @@ services:
     container_name: nginx-proxy-acme
     environment:
       - DEFAULT_EMAIL=${DEFAULT_EMAIL}
+      - NGINX_PROXY_CONTAINER=nginx-proxy
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./certs:/etc/nginx/certs
