--- a/for-your-repo/docker-compose.deploy.yml
+++ b/for-your-repo/docker-compose.deploy.yml
@@ -4,15 +4,12 @@ services:
   web:
     image: ${DOCKERHUB_IMAGE}
     container_name: ${APP_NAME}
-    ports:
-      - "80:80"
-      - "443:443"
     environment:
       - VIRTUAL_HOST=${VIRTUAL_HOST}
       - LETSENCRYPT_HOST=${LETSENCRYPT_HOST}
       - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
     networks:
-      - nginx-proxy
+      - nginx-proxy-network
     restart: unless-stopped
 
 networks:
