--- a/site/.env.production
+++ b/site/.env.production
@@ -1,10 +1,10 @@
-# .env file used with your project and the docker compose files
+# .env.production file used with your project and the docker compose files
 
 # Required variables
 VIRTUAL_HOST= # The domain name you are using for your site
 LETSENCRYPT_HOST= # The domain name you are using for your site
 LETSENCRYPT_EMAIL= # The email you want to use for Let's Encrypt with your site
 DOCKERHUB_IMAGE= # Your site's Docker Hub image (e.g your-username/your-site:latest)
-APP_NAME= # Memorable name of your site/project (e.g your-site, used for container name)
+APP_CONTAINER_NAME= # Memorable name of your site/project (e.g your-site, used for container name)
 
 # Other variables
