--- a/site/docker-compose.build.yml
+++ b/site/docker-compose.build.yml
@@ -5,5 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: ${APP_NAME}
+    container_name: ${APP_CONTAINER_NAME}
     image: ${DOCKERHUB_IMAGE}
+    env_file:
+      - .env.production
