--- a/site/docker-compose.deploy.yml
+++ b/site/docker-compose.deploy.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   web:
     image: ${DOCKERHUB_IMAGE}
-    container_name: ${APP_NAME}
+    container_name: ${APP_CONTAINER_NAME}
     environment:
       - VIRTUAL_HOST=${VIRTUAL_HOST}
       - LETSENCRYPT_HOST=${LETSENCRYPT_HOST}
@@ -11,6 +11,8 @@ services:
     networks:
       - nginx-proxy-network
     restart: unless-stopped
+    env_file:
+      - .env.production
 
 networks:
   nginx-proxy:
